--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.21.2",
-    "cors": "^2.8.5"
+    "node-fetch": "^2.7.0"
   },
   "engines": {
     "node": ">=14.0.0"
